fix truncated job posting styling

--- a/src/jobs.scss
+++ b/src/jobs.scss
@@ -51,6 +51,9 @@
 
     #description {
         margin: 1vh 0;
+    }
+
+    .truncate {
         overflow: hidden;
         display: -webkit-box;
         -webkit-box-orient: vertical; 
